fix: correct mobile menu button alignment

--- a/src/sass/blocks/mobile-catalog.scss
+++ b/src/sass/blocks/mobile-catalog.scss
@@ -28,7 +28,7 @@
 }
 
 .mobile-catalog__back-link {
-  @include button-reset();
+  @include link-reset();
   @include main-font(18px, 18px, 18px, 400);
   display: flex;
   align-items: center;
